# BSpline

./: BezierSpline.cpp  BezierSpline.h  CMakeLists.txt  main.cpp  plotData.py  points.txt
